<resources>
    <string name="app_name">KRSNA</string>

    <string name="onesignal_app_id">8f5dbdaf-3d43-49bf-9e08-b0df7f6f85e8</string>

    <string name="privacy_policy_url">http://www.example.com/</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=MANISH+MAHESH+TALREJA&amp;hl=en</string>
    <string name="choose_one">Choose one</string>
    <string name="isRTL">false</string>
    <string name="set_as_ringtone">Set As Ringtone</string>
    <string name="ringtone_permission_req">Ringtone Permission Request</string>
    <string name="error_try_again">Error Try Again</string>
    <string name="hello_blank_fragment"></string>

    <string name="desc">desc</string>
    <string name="img_no">No Favorite Found</string>
    <string name="set_as_wallpaper">Set As Wallpaper</string>
    <string name="download">Downloading</string>
    <string name="set_as_ring">Set As Ringtone</string>
    <string name="set_ringnotification">Notification Ringtone</string>
    <string name="set_ringalarm">Alarm Ringtone</string>

    <string name="version">Version</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!-- main features screen name -->
    <string name="wallpaper">KRSNA Images</string>
    <string name="ringtone">Kirtan</string>

    <!-- main menu overflow -->
    <string name="title_activity_quiz">Quiz</string>
    <string name="about">About</string>
    <string name="email">Email</string>
    <string name="loading">Loading..</string>
    <string name="quiz">Quiz Game</string>
    <string name="net_not_conn">Internet not connected</string>
    <string name="christmas">KRSNA App</string>
    <string name="message">BG Shlokas</string>
    <string name="reload">Reload</string>
    <string name="no_message_found">No Shlokas Found</string>
    <string name="no_wallpaper_found">No KRSNA Images Found</string>
    <string name="no_ringtones_found">No Kirtan Found</string>
    <string name="no_videos_found">No Videos Found</string>
    <string name="server_no_conn">Error Connecting Server, Please Try Again</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Enable Push Notification</string>
    <string name="moreapp">More Apps</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="shareapp">Share App</string>
    <string name="home">Home</string>
    <string name="nav_header_title">HARE KRISHNA APP</string>
    <string name="nav_header_message">HARE KRISHNA, HARE RAMA</string>
    <string name="more">More</string>
    <string name="no_data_found">No Data Found</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="message_copied">Shloka Has Been Copied</string>
    <string name="timer">Timer :</string>
    <string name="no_of_que">No Of Questions :</string>
    <string name="time_per_que">Time Per Question (SEC):</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="a5050">5050</string>
    <string name="skip">Skip</string>
    <string name="ok">OK</string>
    <string name="cancel_quiz">Cancel Quiz</string>
    <string name="sure_cancel_quiz">Are you sure you want to cancel quiz?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="skip_not_available">Skip is not available</string>
    <string name="not_available_5050">50–50 not available</string>
    <string name="already_used_5050">Already used 50–50</string>
    <string name="select_answer">Please select answer</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>
    <string name="ringtone_set">Ringtone Set</string>
    <string name="sure_quit">Are you sure you want to quit?</string>
    <string name="rate_app">Rate App</string>
    <string name="cannot_use_download_permission">Cannot Use Download Feature Without Request Permission</string>
    <string name="setting_wallpaper">We are setting Wallpaper</string>
    <string name="wallpaper_set">Wallpaper Set</string>
    <string name="please_wait">Please Wait</string>
    <string name="downloading">Downloading..</string>
    <string name="wallpaper_saved">Wallpaper Saved</string>
    <string name="save">Save</string>
    <string name="set_as">Set As</string>
    <string name="christmas_ringtone">KRSNA Ringtone :-</string>
    <string name="connect_to_working_internet">Please Connect To Internet</string>
    <string name="alarm_set">Alarm Ringtone Set</string>
    <string name="ringtone_already_saved">Ringtone Already Saved</string>
    <string name="ringtone_saved">Ringtone Saved</string>
    <string name="set_as_noti">Set As Notification Tone</string>
    <string name="set_as_alarm">Set As Alarm Tone</string>
    <string name="error_downloading_file">Error Downloading File</string>
    <string name="noti_set">Notification Tone Set</string>
    <string name="most_view_wallpaper">Most Viewed Images</string>
    <string name="download_this_ring">Download This And Many Other Kirtan</string>
    <string name="results">Results</string>
    <string name="total_number_of_question">Total Number Of Question</string>
    <string name="number_of_questions_attempted">Number Of Questions Attempted</string>
    <string name="number_of_correct_answer">Number Of Correct Answer</string>
    <string name="number_of_wrong_answer">Number Of Wrong Answer</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="server_error">Server Error</string>
    <string name="internet_not_connected">Please Connect To Internet</string>
    <string name="error_connect_net_tryagain">Please Connect To Internet And Try Again</string>
    <string name="try_again">Try Again</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="theme">Theme</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="get_more_wall">Get More Amazing Images, Download Now</string>
    <string name="get_more_ringtone">Get More Amazing Kirtan, Download Now</string>
    <string name="err_set_wallpaper">Error While Setting Wallpaper</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="home_lock_screen">Home Screen And Lock Screen</string>
    <string name="allow_noti_per">Allow Permission From App Setting Page</string>
    <string name="noti_permissions">Notification Permission</string>
    <string name="allow">Allow</string>
    <string name="needs_permissions">Please Allow Notification Permission To Receive Notification For Latest Updates</string>
</resources>
