<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF6FA"

    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/results"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/total_number_of_question"
                android:textColor="@color/text_black_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/number_of_questions_attempted"
                android:textColor="@color/text_black_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/number_of_correct_answer"
                android:textColor="@color/text_black_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/number_of_wrong_answer"
                android:textColor="@color/text_black_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

        </LinearLayout>

        <View
            android:layout_width="1dp"

            android:layout_height="match_parent"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_tot_que"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="@color/text_black_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <TextView
                android:id="@+id/textView_attempted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="@color/text_black_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <TextView
                android:id="@+id/textView_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="@color/text_black_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <TextView
                android:id="@+id/textView_wrong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="@color/text_black_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_playagain"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_red"
            android:text="@string/play_again"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_exit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_red"
            android:text="@string/exit"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>
